fixes + css changing
fixed the issue of if the total spend amount went below zero you were unable to go above zero - changed the css so if the total spend went too big the number would be larger than the box it was inside

--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ header h2 {
   height: 40%;
   width: 10%;
   text-align: center;
+  width: fit-content;
 }
 
 .row-title {
